# BA_glenntungka

./: .gitignore
Diff_MPC_ws/: guide.txt
Diff_MPC_ws/maps/: FTM_Halle.yaml  FTM_Halle_cleaned_high_res.yaml  config_FTM_Halle.yaml
Diff_MPC_ws/postprocessing/: Visualization.py  Visualization_debug.py  benchmarking.py  data_from_rosbag.py  guide.txt  listener.py
Diff_MPC_ws/postprocessing/archiv/: Visualization.py  listener.py  pickle_test.py  pickle_test_postprocessor.py
Diff_MPC_ws/postprocessing/data/: diff_mpc_sim.csv
Diff_MPC_ws/postprocessing/results/: diff_mpc_sim_result.csv
Diff_MPC_ws/src/mpc/: package.xml  setup.cfg  setup.py
Diff_MPC_ws/src/mpc_traditional/: package.xml  setup.cfg  setup.py
Diff_MPC_ws/src/mpc_traditional/config/: MPC_traditional.yaml
Diff_MPC_ws/src/mpc_traditional/launch/: mpc_traditional_launch.py
Diff_MPC_ws/src/mpc_traditional/mpc_traditional/: MPC_traditional.py
Diff_MPC_ws/src/particle_filter/: environment.yml  setup.cfg
Diff_MPC_ws/src/pure_pursuit/: setup.cfg  (+2 more)
Johannes_MPC_KS/: FTM_Halle.csv  FTM_Halle_Large_Track_orig.pgm  FTM_Halle_Large_Track_orig.yaml  MPC_Felix.py  MPC_Linear_KS.py  Stanley.py  Visualization.py  Visualization_debug.py  config_FTM_Halle.yaml  config_FTM_Halle_Large_Track_orig.yaml  datalogging_MPC_KS.p  diff_mpc.py  env.txt  mincurv_SM_0_FTM_Halle_LargeTrack.csv  quat_to_eul_test.py
mpc.pytorch/: env.txt  examples.code-workspace
mpc.pytorch/examples/: MPC_Felix.py  Pendulum Control.ipynb  f1tenth.py  gym_pendulum.py  gym_pendulum_state_machine.py  test.py
mpc.pytorch/tests/: test_mpc.py
(+21 files in other folders)
